<resources>
    <string name="app_name">SuperBank</string>
    <string name="my_cards">My Cards</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="transaction">Transaction</string>
    <string name="profile">Profile</string>
    <string name="recent">Recent</string>
    <string name="select_time_range"><a href="#">Select Time Range</a></string>
    <string name="all">All</string>
    <string name="income">\tIncome</string>
    <string name="expense">\tExpense</string>
    <string name="transfer">Transfer</string>
    <string name="send">Send</string>
    <string name="available_balance">Available Balance</string>
    <string name="usd">$</string>
    <string name="make_payment">Make Payment</string>
    <string name="due">Due:</string>
    <string name="minus">-</string>
    <string name="remove_card">Remove Card</string>
    <string name="change_card_pin">Change Card Pin</string>
    <string name="view_card_iban">View Card IBAN</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="iban_or_mobile_number">IBAN Or Mobile Number</string>
    <string name="amount">Amount</string>
    <string name="transaction_type">Transaction type:</string>
    <string name="transaction_amount">Transaction amount:</string>
    <string name="transaction_date">Transaction date:</string>
    <string name="transaction_description">Transaction description:</string>
    <string name="transaction_title">Transaction title:</string>
    <string name="offers">Offers</string>
    <string name="log_out">Log Out</string>
    <string name="full_name">Full Name:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_email">Change Email</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again"><a href="#">Try Again</a></string>
    <string name="view_all">View All</string>
    <string name="currency">Currency</string>
    <string name="change_password">Change Password</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="result">Result</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>

    <string-array name="currency_name">
        <item>GEL</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>
</resources>