<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nointernetconection.NoInternetFragment"
    android:orientation="vertical"
    android:background="@color/black"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/no_internet_connection"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        />
    <TextView
        android:id="@+id/try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/try_again"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOut_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/shape_button_background"
        android:padding="5dp"
        android:backgroundTint="#FF0000"
        android:text="@string/log_out"
        android:textColor="@color/white" />
</LinearLayout>