<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".transactions.ui.TransactionsFragment">

    <TextView
        android:id="@+id/transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/transaction"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/recent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recent"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_time_range"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/selector_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/filter_selector_color"
            android:minWidth="70dp"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/all"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent" />
        <TextView
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/filter_selector_color"
            android:minWidth="70dp"
            android:padding="5dp"
            android:paddingEnd="15dp"
            android:paddingStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/income"
            android:textAlignment="center"
            android:textColor="@color/not_selected"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/income" />
        <TextView
            android:id="@+id/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/filter_selector_color"
            android:minWidth="70dp"
            android:padding="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/expense"
            android:textAlignment="center"
            android:textColor="@color/not_selected"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/export"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

</LinearLayout>