<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/transfer_linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/shape_icon_background"
            android:backgroundTint="#DBE3F8"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_transfer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/transfer"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/offer_linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/shape_icon_background"
            android:backgroundTint="#DBE3F8"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_offer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/offers"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/currency_linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/shape_icon_background"
            android:backgroundTint="#DBE3F8"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_currency" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/currency"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>