<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".transactions.transactioninfo.TransactionInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_detail"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/from_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_item_background"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp">


            <ImageView
                android:id="@+id/cardType_image"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/shape_icon_background"
                android:backgroundTint="#DBE3F8"
                android:scaleType="centerInside"
                android:src="@drawable/ic_shopping_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Grocery" />

                <TextView
                    android:id="@+id/carNumber_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="**1234" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/to_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_item_background"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/icon_image"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/shape_icon_background"
                android:backgroundTint="#FFDEE2"
                android:scaleType="centerInside"
                android:src="@drawable/ic_shopping_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Grocery" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="**1234" />
            </LinearLayout>

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="100.2" />
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            tools:text="Lorem ipsum"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>